myousica: added google analytics code, fixed footer spacing with multitrack layout
git-svn-id: file:///srv/svn/myousica/myousica/trunk@1045 1758279c-6b0d-4dd2-8212-40bfc25400ca

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2385,6 +2385,10 @@ p.sign-in .button{
 	width: 732px;
 }
 
+.multitrack #footer .whiteblock {
+	width: 100%;
+}
+
 /* generici correttori */
 .no-bold{
 	font-weight:normal;
